--- a/tex/conclusione.tex
+++ b/tex/conclusione.tex
@@ -1,1 +1,31 @@
 \section{Conclusione}
+
+L'esperimento descritto ha dimostrato l'efficacia dell'approccio basato su
+Answer Set Programming per affrontare il problema
+dell'individuazione automatica dei garanti accademici. Grazie all'uso di
+Clingo e Python, è stato possibile implementare un sistema in
+grado di analizzare un grande volume di dati e di risolvere un problema
+complesso in tempi computazionalmente accettabili.
+
+I risultati ottenuti dimostrano come l'approccio adottato abbia soddisfatto
+pienamente i criteri richiesti, garantendo una selezione accurata e conforme
+alle specifiche definite. La modellazione logica, combinata con la capacità di
+ASP di gestire vincoli complessi e criteri di ottimizzazione, si è dimostrata
+uno strumento indispensabile per affrontare questo problema.
+
+Nonostante il successo del sistema, permangono alcune aree di miglioramento. Ad
+esempio, l'introduzione della possibilità che un docente possa essere garante
+per due corsi di studio con un peso proporzionale (0,5 per ciascuno) potrebbe
+rendere il sistema più flessibile, ma al costo di un aumento del tempo di
+risoluzione. Inoltre, è necessaria la creazione di una base dati centralizzata,
+aggiornata e accessibile in tempo reale; ciò richiederebbe una ristrutturazione
+del codice Python esistente ma si avrebbe il vantaggio di operare su dati
+completi e aggregati. Sarebbe altresì opportuno sviluppare un'interfaccia utente
+per rendere il sistema più accessibile e facile da utilizzare per il personale
+accademico.
+
+In conclusione, il progetto rappresenta un primo passo promettente verso
+l'automazione intelligente delle attività accademiche. L'adozione futura di
+soluzioni avanzate, quali una maggiore integrazione con i sistemi di gestione
+universitaria e l'uso di tecnologie complementari, potrebbe ampliare
+ulteriormente l'applicabilità e l'impatto di questo lavoro.
